--- a/index.html
+++ b/index.html
@@ -159,26 +159,27 @@
 	<div class="jumbotron">
 		<div class="narrow">
 			<div class="col-12">
-				<h3 class="heading text-center">Opinie naszych klientów:</h3>
+				<h3 class="heading text-center">Podziękowania za współpracę dla zespołu:</h3>
 			</div>
 			<div class="row text-center">
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-md-4 col-lg-12 col-xl-4">
-							<img src="img/client2.png" class="client" alt="">
+							<img src="img/Lider.jpeg" class="client" alt="">
 						</div>
 						<div class="col-md-8 col-lg-12 col-xl-8">
 							<blockquote class="blockquote text-center">
 								<p>
-								  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								  Nesciunt, sint eveniet? Adipisci corrupti facilis
-								  repellendus excepturi inventore harum eum, error temporibus
-								  non illo aut, veniam iusto expedita qui, optio repudiandae!
+									Pragnę złożyć wyrazy podziękowania za ogromne zaangażowanie,
+									profesjonalizm i znakomitą organizację pracy Teamu 2.
+									Dowodzona przezemnie grupa może być wzorem dla innych.
+									Mam nadzieję, że w przyszłości nasza współpraca
+									będzie nadal kontynuowana.
 								</p>
 							  </blockquote>
 							  <hr class="jumbo-line" />
 							  <footer class="blockquote-footer">
-								<cite>Jadwiga z Katowic</cite>
+								<cite>TeamLeader Bartłomiej 62252</cite>
 							  </footer>
 						</div>
 					</div>
@@ -186,20 +187,103 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-md-4 col-lg-12 col-xl-4">
-						<img src="img/client1.png" class="client" alt="">
+						<img src="img/Mieczyslaw_62244.png" class="client" alt="">
 						</div>
 						<div class="col-md-8 col-lg-12 col-xl-8">
 							<blockquote class="blockquote text-center">
 								<p>
-								  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-								  Nesciunt, sint eveniet? Adipisci corrupti facilis
-								  repellendus excepturi inventore harum eum, error temporibus
-								  non illo aut, veniam iusto expedita qui, optio repudiandae!
+									Korzystając z okazji, chciałbym Całemu zespołowi serdecznie podziękować za współpracę,
+									ciekawe wyzwania zawodowe i cenne wskazówki — ostatni projekt uważam 
+									za ważny etap w mojej karierze i jestem wdzięczny, że miałem możliwość pracy w Teamie nr 2.
+									Mam nadzieję, że Cały zaspół również będzie miło wspominać naszą współpracę. 
+									<b>Przesyłam serdeczne pozdrowienia i życzę wielu sukcesów!</b></p>
+							  </blockquote>
+							  <hr class="jumbo-line" />
+							  <footer class="blockquote-footer">
+								<cite>Mieczysław 62244</cite>
+							  </footer>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-lg-6">
+					<div class="row">
+						<div class="col-md-4 col-lg-12 col-xl-4">
+							<img src="img/Bartek2.png" class="client" alt="">
+						</div>
+						<div class="col-md-8 col-lg-12 col-xl-8">
+							<blockquote class="blockquote text-center">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+									Earum nisi repellat consequuntur neque, ullam itaque? 
+									Voluptates laboriosam modi tempore inventore pariatur, 
+									praesentium voluptatibus laborum illum ipsa atque fuga quidem minus.
 								</p>
 							  </blockquote>
 							  <hr class="jumbo-line" />
 							  <footer class="blockquote-footer">
-								<cite>Klemens z Gliwic</cite>
+								<cite> Bartłomiej 62252</cite>
+							  </footer>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="row">
+						<div class="col-md-4 col-lg-12 col-xl-4">
+						<img src="img/Ania.png" class="client" alt="">
+						</div>
+						<div class="col-md-8 col-lg-12 col-xl-8">
+							<blockquote class="blockquote text-center">
+								<p>Składam podziękowanie w uznaniu wzorowej sumienności i zaangażowania w zadania Teamu. 
+									 Mam nadzieję, że cała grupa będzie wspominać czas spędzony w równie pozytywnie, co i ja. 
+									Liczę, że pozostaniemy w kontakcie.</p>
+							  </blockquote>
+							  <hr class="jumbo-line" />
+							  <footer class="blockquote-footer">
+								<cite>Anna 62258</cite>
+							  </footer>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-lg-6">
+					<div class="row">
+						<div class="col-md-4 col-lg-12 col-xl-4">
+							<img src="img/EwelinaK.png" class="client" alt="">
+						</div>
+						<div class="col-md-8 col-lg-12 col-xl-8">
+							<blockquote class="blockquote text-center">
+								<p>
+									Doświadczenie zdobyte naszej współpracy z pewnością będę wykorzystywała przez resztę życia zawodowego. 
+									To w końcu dzięki Waszym radom i pomocy udało mi się odnaleźć pasję, jaką jest programowanie.
+									Cieszę się, że  miałam szansę trafić pod skrzydła Teamu 2, a także rozwijać się i piąć po szczeblach kariery. 
+								</p><p><b>Wszystkiego dobrego!</b></p>
+							  </blockquote>
+							  <hr class="jumbo-line" />
+							  <footer class="blockquote-footer">
+								<cite>Ewelina K</cite>
+							  </footer>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="row">
+						<div class="col-md-4 col-lg-12 col-xl-4">
+						<img src="img/EwelinaG.jpg" class="client" alt="">
+						</div>
+						<div class="col-md-8 col-lg-12 col-xl-8">
+							<blockquote class="blockquote text-center">
+								<p>
+									Z uśmiechem na twarzy będę wspominać nasze spotkania, w jakich miałam okazję uczestniczyć. 
+									Spodziewałam się, że spotkam wielu profesjonalistów, lecz nie przypuszczałam, 
+									że będę mogła pracować z osobami o tak wielkim poczuciu humoru! 
+									Dziękuję za Wasze wsparcie oraz żarty, które skutecznie rozładowywały nawet najbardziej napięte sytuacje.</p>
+							  </blockquote>
+							  <hr class="jumbo-line" />
+							  <footer class="blockquote-footer">
+								<cite>Ewelina G</cite>
 							  </footer>
 						</div>
 					</div>
