--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RWD miniprojekt</title>
     <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="css/fixed.css" />
   </head>
 
@@ -100,7 +100,7 @@
 				<div class="col-md-4">
 					<div class="resource">
 						<i class="far fa-registered fa-6x"></i>
-						<h3>Znak &reg;</h3>
+						<h3>Źródła &reg;</h3>
 						<p>
 						  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
 						  Praesentium, blanditiis reiciendis laborum, ratione quibusdam
@@ -116,7 +116,7 @@
 				<div class="col-md-4">
 					<div class="resource">
 						<i class="fas fa-terminal fa-6x"></i>
-						<h3>Terminal</h3>
+						<h3>Linki</h3>
 						<p>
 						  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
 						  Praesentium, blanditiis reiciendis laborum, ratione quibusdam
@@ -132,7 +132,7 @@
 				<div class="col-md-4">
 					<div class="resource">
 						<i class="fab fa-js fa-6x"></i>
-						<h3>Javascript</h3>
+						<h3>Ustawienia</h3>
 						<p>
 						  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
 						  Praesentium, blanditiis reiciendis laborum, ratione quibusdam
