--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 			<div class="row text-center">
 				<div class="col-md-4">
 					<div class="resource">
-						<i class="far fa-registered fa-6x"></i>
-						<h3>Źródła &reg;</h3>
+						<i class="far fa-clock fa-6x"></i>
+						<h3>Źródła</h3>
 						<p>
 						  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
 						  Praesentium, blanditiis reiciendis laborum, ratione quibusdam
@@ -115,7 +115,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="resource">
-						<i class="fas fa-terminal fa-6x"></i>
+						<i class="fas fa-coffee fa-6x"></i>
 						<h3>Linki</h3>
 						<p>
 						  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -131,7 +131,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="resource">
-						<i class="fab fa-js fa-6x"></i>
+						<i class="fab fa-camera fa-6x"></i>
 						<h3>Ustawienia</h3>
 						<p>
 						  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
